added battery to conky

--- a/.conkyrc
+++ b/.conkyrc
@@ -17,14 +17,7 @@ conky.text = [[
     {"full_text": " | ", "color":"\#555555"},
     {"full_text": "RAM: $mem","color":"\#cda869"},
     {"full_text": " | ", "color":"\#555555"},
-    {"full_text": "LAN: ${addr em0}","color":"\#89b859"},
-    {"full_text": " | ", "color":"\#555555"},
-    {"full_text": "VPN: ${addr tun0}","color":"\#00aaaa"},
-    {"full_text": " | ", "color":"\#555555"},
-    {"full_text": "${exec hostname }", "color":"\#9b703f"},
-    {"full_text": " | ", "color":"\#555555"},
-    {"full_text": "UP: ${uptime_short} ", "color":"\#838184"},
-    {"full_text": " | ", "color":"\#555555"},
+    {"full_text": "BAT: ${exec sysctl -n hw.acpi.battery.life}%", "color":"\#89b859"},
     {"full_text": "${time %A %Y-%m-%d}", "color":"\#cccccc"},
     {"full_text": "${time %H:%M}", "color":"\#cccccc"}
 ],
