--- a/.conkyrc
+++ b/.conkyrc
@@ -18,7 +18,7 @@ conky.text = [[
     {"full_text": "RAM: $mem","color":"\#cda869"},
     {"full_text": " | ", "color":"\#555555"},
     {"full_text": "BAT: ${battery_percent BAT0}%", "color":"\#89b859"},
-    {"full_text": "$LAN: ${addr wlp2s0}", "color" :"\#89b859"},
+    {"full_text": "LAN: ${addr wlp2s0}", "color" :"\#89b859"},
     {"full_text": "${time %A %Y-%m-%d}", "color":"\#cccccc"},
     {"full_text": "${time %H:%M}", "color":"\#cccccc"}
 ],
